<resources>
    <string name="app_name">RideWithUs</string>
    <string name="title_activity_driver_map">Map</string>
    <string name="title_activity_side_navigation">side_navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="Chat">Chat</string>
    <string name="Paypal">PayPal</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="chargedisplay">chargeDisplay</string>
    <string name="charge">Charge :</string>
    <string name="seatDisplay">seatDisplay</string>
    <string name="seat">Seat :</string>
    <string name="timedisplay">timeDisplay</string>
    <string name="time">Time :</string>
    <string name="driver_name">Driver Name</string>
    <string name="join_the_ride">Join the Ride</string>
    <string name="dollar">$</string>
</resources>
